package gameZeldiablo.Zeldiablo.Cases;

/**
 * Liste de type de case
 */
public enum CaseType {
    SOLIDE,
    SOL,
    INTERACTIVE // qui peut devenir solide ou non
}
